tests/errors/array/array_lit_wrong_element_type_errors.err.expected
error: at 5:13: [TC-ArrayLitElementTypeMismatch] In function 'f', block 'entry': Array literal element 1 has type i32, expected i64
   |
 5 |             a = [1i64, 2i32];
   |             ^^^^^^^^^^^^^^^^
